<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/surface"
    android:elevation="10dp">

    <Button
        android:id="@+id/navHome"
        style="@style/BottomNav.Tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tab_home" />

    <Button
        android:id="@+id/navLibrary"
        style="@style/BottomNav.Tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tab_library" />

    <Button
        android:id="@+id/navFactory"
        style="@style/BottomNav.Tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tab_factory" />

    <Button
        android:id="@+id/navQuality"
        style="@style/BottomNav.Tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tab_quality" />

    <Button
        android:id="@+id/navSettings"
        style="@style/BottomNav.Tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tab_settings" />
</LinearLayout>
